--- a/editor/assets/MainWindow.html
+++ b/editor/assets/MainWindow.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <head>
+        <link rel='stylesheet' href="Main.css"></link>
+    </head>
+    <body id='body'>
         <h1>Main Window Poggers!</h1>
     </body>
 </html>
