File Open dialogue functions

--- a/editor/assets/MainWindow.html
+++ b/editor/assets/MainWindow.html
@@ -4,6 +4,7 @@
         <link rel='stylesheet' href="Main.css"></link>
     </head>
     <body id='body'>
-        <h1>Main Window Poggers!</h1>
+        <button id='openFile'>Open a File</button>
+        <div class='container_right' id='EntryList'></div>
     </body>
 </html>
