Things are progressing; also, I started on custom color settings

--- a/editor/assets/MainWindow.html
+++ b/editor/assets/MainWindow.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href="Main.css"></link>
     </head>
     <body id='body'>
-        <button id='openFile'>Open a File</button>
-        <div class='container_right' id='EntryList'></div>
+        <button class="menuButton" id='openFile'>Open a File</button>
+        <div class='container_left' id='EntryList'></div>
     </body>
 </html>
