More UI formatting, still not capable of writing data currently

--- a/editor/assets/MainWindow.html
+++ b/editor/assets/MainWindow.html
@@ -14,7 +14,7 @@
             <h1 id='entryName'></h1>
             <form class="editingContainer">
                 <div id='attributes'></div>
-                <textarea class='entryText' id='EntryContentText'></textarea>
+                <div id="content"></div>
             </form>
         </div>
     </body>
