Can now get data from user input

--- a/editor/assets/MainWindow.html
+++ b/editor/assets/MainWindow.html
@@ -12,10 +12,11 @@
         <div class='container_left' id='EntryList'></div>
         <div class='container_right' id='EntryContent'>
             <h1 id='entryName'></h1>
-            <form class="editingContainer">
+            <form class="editingContainer" name="entryContentForm">
                 <div id='attributes'></div>
                 <div id="content"></div>
             </form>
+            <button class="SubmitButton" id="submit">Save</button>
         </div>
     </body>
 </html>
