--- a/editor/assets/MainWindow.html
+++ b/editor/assets/MainWindow.html
@@ -8,6 +8,7 @@
         <div class='toolbar'>
             <button class="menuButton" id='openFile'>Open a File</button>
             <button class="menuButton" id='reload'>Reload</button>
+            <button class="menuButton" id="cleanConsole">Clean Console</button>
         </div>
         <div class='container_left' id='EntryList'></div>
         <div class='container_right' id='EntryContent'>
